--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "start": "./app.sh"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mongodb": "^3.1.13"
   }
 }
