--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "express": "^4.16.4",
-    "mongodb": "^3.1.13",
-    "node-fetch": "^2.3.0"
+    "node-fetch": "^2.3.0",
+    "pg": "^7.8.0"
   }
 }
