--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,8 @@
   },
   "dependencies": {
     "express": "^4.16.4",
-    "mongodb": "^3.1.13",
-    "node-fetch": "^2.3.0"
+    "node-fetch": "^2.3.0",
+    "pg": "^7.8.0"
   },
   "devDependencies": {
     "eslint": "^5.13.0",
