--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "yarn": "1.x"
   },
   "scripts": {
-    "start": "node server/app.js"
+    "start": "node server/app.js",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
   "dependencies": {
     "express": "^4.16.4",
