Add Heroku post build script in package.json v2

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "node server/app.js",
-    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
+    "heroku-postbuild": "cd front && npm install --only=dev && npm install && npm run build"
   },
   "dependencies": {
     "express": "^4.16.4",
